// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms/Button Default 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <button
    className="button type-primary"
    onClick={[Function]}
  >
    <header
      className="heading color-inverted size-md weight-bold"
    >
      You Shall Not Pass!
    </header>
  </button>
</div>
`;

exports[`Storyshots Atoms/Button Inline 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <button
    className="button type-primary is-inline"
    onClick={[Function]}
  >
    <header
      className="heading color-inverted size-md weight-bold"
    >
      You Shall Not Pass!
    </header>
  </button>
</div>
`;

exports[`Storyshots Atoms/Button Muted 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <button
    className="button type-primary is-muted"
    onClick={[Function]}
  >
    <header
      className="heading color-inverted size-md weight-bold"
    >
      You Shall Not Pass!
    </header>
  </button>
</div>
`;

exports[`Storyshots Atoms/Button Types 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <button
    className="button type-primary"
    onClick={[Function]}
  >
    <header
      className="heading color-inverted size-md weight-bold"
    >
      You Shall Not Pass!
    </header>
  </button>
  <button
    className="button type-secondary"
    onClick={[Function]}
  >
    <header
      className="heading color-primary size-md weight-bold"
    >
      You Shall Not Pass!
    </header>
  </button>
  <button
    className="button type-tertiary is-inline"
    onClick={[Function]}
  >
    <header
      className="heading color-primary size-md weight-bold"
    >
      You Shall Not Pass!
    </header>
  </button>
</div>
`;
